--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,10 @@ version = "0.1.0"
 
 [deps]
 SPICE = "5bab7191-041a-5c2e-a744-024b9c3a5062"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [compat]
 julia = "1.6"
-SPICE = "0.2.4" 
+SPICE = "0.2.4"
+Makie = "0.22" 
